# telegram_bot_frontend

./: .env.example  .gitignore  Bot.py  README.md  bot.py  config.sample.py  docker-compose.yml  logger_config.yaml  pyproject.toml
bots/: corona_care_bot.py
compose/telebot/: Dockerfile  start
config/: settings.py
