[tool.poetry]
name = "corona-telegram"
version = "0.1.0"
description = ""
authors = ["d-Rickyy-b <d-Rickyy-b@users.noreply.github.com>", "oryon-dominik <oryon@cyberise.de>"]

[tool.poetry.dependencies]
python = "^3.8"
python-telegram-bot = "^12.4.2"
python-dotenv = "^0.12.0"
requests = "^2.23.0"
black = "^19.10b0"
django-environ = "^0.4.5"
PyYAML = "^5.3.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
